# 22s1-cp-spa-team-05

./: .gitignore  README.md
Team05/Code05/src/spa/: CMakeLists.txt
Team05/Code05/src/spa/src/common/: CMakeLists.txt  FileIOManager.cpp  FileIOManager.h  PostFixConverter.h  StringSplitter.h
Team05/Code05/src/spa/src/dataclasses/: AbstractQueryResult.h  CMakeLists.txt  Entity.cpp  Entity.h  Pattern.cpp  Pattern.h  QueryClause.h  Relationship.h
Team05/Code05/src/spa/src/pkb/: CMakeLists.txt  EntityManager.cpp  EntityManager.h  FollowsManager.cpp  FollowsManager.h  FollowsTManager.cpp  FollowsTManager.h  Manager.h  ModifiesManager.cpp  ModifiesManager.h  PKB.cpp  PKB.h  ParentManager.cpp  ParentManager.h  ParentTManager.cpp  ParentTManager.h  PatternManager.cpp  PatternManager.h  PkbException.h  QPSInterface.cpp  QPSInterface.h  RelationshipManager.cpp  RelationshipManager.h  SPinterface.cpp  SPinterface.h  UIInterface.cpp  UIInterface.h  UsesManager.cpp  UsesManager.h
Team05/Code05/src/spa/src/pkb/design_objects/: CMakeLists.txt  PkbClause.h  PkbEntity.h  PkbPattern.h  PkbQuery.h  PkbRelationship.h
Team05/Code05/src/spa/src/pkb/graph_extractors/: PkbGraphNextStarRelationshipExtractor.cpp  PkbGraphNextStarRelationshipExtractor.h
Team05/Code05/src/spa/src/pkb/graph_managers/: PkbGraphManager.cpp  PkbGraphManager.h
Team05/Code05/src/spa/src/pkb/interfaces/: PKBQueryHandler.cpp  PKBQueryHandler.h  PKBUpdateHandler.cpp  PKBUpdateHandler.h  QPSInterface.cpp  QPSInterface.h  QPStoPKBFacade.cpp  QPStoPKBFacade.h  SPinterface.cpp  SPinterface.h  SPtoPKBFacade.cpp  SPtoPKBFacade.h  UIInterface.cpp  UIInterface.h  UItoPKBFacade.cpp  UItoPKBFacade.h
Team05/Code05/src/spa/src/pkb/managers/: EntityManager.cpp  EntityManager.h  PatternManager.cpp  PatternManager.h
Team05/Code05/src/spa/src/pkb/pkbQueryManager/: CMakeLists.txt  PkbEntityQueryHelper.cpp  PkbEntityQueryHelper.h  PkbPatternQueryHelper.cpp  PkbPatternQueryHelper.h  PkbQueryManager.cpp  PkbQueryManager.h  PkbRelationshipQueryHelper.cpp  PkbRelationshipQueryHelper.h
Team05/Code05/src/spa/src/pkb/pkbRepository/: CMakeLists.txt  PkbRepository.h
Team05/Code05/src/spa/src/pkb/pkbUpdateManager/: PkbUpdateManager.cpp  PkbUpdateManager.h
Team05/Code05/src/spa/src/pkb/pkb_object/: PKB.cpp  PKB.h
Team05/Code05/src/spa/src/pkb/table_managers/: EntityManager.cpp  EntityManager.h  EntityPkbTableManager.cpp  EntityPkbTableManager.h  FollowsManager.cpp  FollowsManager.h  FollowsPkbTableManager.cpp  FollowsPkbTableManager.h  FollowsTManager.cpp  FollowsTManager.h  FollowsTPkbTableManager.cpp  FollowsTPkbTableManager.h  Manager.h  ModifiesManager.cpp  ModifiesManager.h  (+29 more)
Team05/Code05/src/spa/src/qps/: CMakeLists.txt  Clause.cpp  Clause.h  ClauseResult.cpp  ErrorChecker.cpp  ErrorChecker.h  FollowsClause.cpp  FollowsClause.h  ModifiesPClause.cpp  ModifiesPClause.h  ModifiesSClause.h  PQLError.cpp  PQLError.h  PQLToken.cpp  PQLToken.h  ParentClause.h  ParserManager.cpp  ParserManager.h  PatternClause.cpp  PatternClause.h  QPS.cpp  QPS.h  Query.cpp  Query.h  QueryEvaluator.cpp  QueryEvaluator.h  QueryParser.cpp  QueryParser.h  SelectClause.cpp  Tokenizer.cpp  Tokenizer.h  UsesClause.cpp  UsesClause.h  UsesPClause.cpp  UsesPClause.h  UsesSClause.cpp
Team05/Code05/src/spa/src/sp/: AST.h  CMakeLists.txt  SPException.h  SourceProcessor.cpp  SourceProcessor.h  Token.h
Team05/Code05/src/unit_testing/: CMakeLists.txt
Team05/Code05/src/unit_testing/src/: TestAST.cpp
Team05/Code05/src/unit_testing/src/common/: CMakeLists.txt  TestFileIOManager.cpp  TestPostFixConverter.cpp
Team05/Code05/src/unit_testing/src/dataclasses/: CMakeLists.txt  TestAST.cpp
Team05/Code05/src/unit_testing/src/pkb/: CMakeLists.txt  TestEntityPkbTableManager.cpp  TestModifiesPkbTableManager.cpp  TestPKB.cpp  TestPkb.cpp  TestPkbDesignObjects.cpp  TestPkbEntityManager.cpp  TestPkbEntityTable.cpp  TestPkbGraphManager.cpp  TestPkbPatternTable.cpp  TestPkbQueryEntities.cpp  TestPkbQueryHandler.cpp  TestPkbQueryPatterns.cpp  TestPkbQueryRelationships.cpp  TestPkbRelationshipTable.cpp
Team05/Code05/src/unit_testing/src/qps/: CMakeLists.txt  TestAffectsClauses.cpp  TestAffectsParser.cpp  TestArgumentType.cpp  TestCallsClauses.cpp  TestCallsParser.cpp  TestCfgClauseOptimiser.cpp  TestClauseArgument.cpp  TestClauseResult.cpp  TestDeclaration.cpp  TestDeclarationParser.cpp  TestDesignEntity.cpp  TestEntityClauseResult.cpp  TestFollowClauses.cpp  TestFollowsClauses.cpp  TestFollowsParser.cpp  TestModifiesPClause.cpp  TestModifiesParser.cpp  TestModifiesSClause.cpp  TestNextClauses.cpp  TestNextParser.cpp  TestPQLEntity.cpp  TestPQLRelationship.cpp  TestParentClause.cpp  TestParentClauses.cpp  TestParentParser.cpp  TestParserManager.cpp  TestPatternAssignClause.cpp  TestPatternAssignParser.cpp  TestPatternIfClause.cpp  TestPatternParser.cpp  TestPatternWhileClause.cpp  TestQPS.cpp  TestQPSTokenizer.cpp  TestQuery.cpp  TestQueryEvaluator.cpp  TestQueryParser.cpp  TestQueryResultsCombiner.cpp  TestQueryResultsOptimiser.cpp  TestQueryResultsProjector.cpp  (+13 more)
Team05/Code05/src/unit_testing/src/sp/: CMakeLists.txt  TestAST.cpp  TestAssignSimpleSyntaxRule.cpp  TestCFG.cpp  TestCallSimpleSyntaxRule.cpp  TestCallsAndCallsTExtractor.cpp  TestConditionalExpressionSimpleSyntaxRule.cpp  TestConstantValueSimpleSyntaxRule.cpp  TestControlFlowParser.cpp  TestDesignExtractorManager.cpp  TestEntityExtractor.cpp  TestExpressionSimpleSyntaxRule.cpp  TestFollowsAndFollowsTExtractor.cpp  TestFollowsExtractor.cpp  TestFollowsTExtractor.cpp  TestIfSimpleSyntaxRule.cpp  TestLexer.cpp  TestModifiesExtractor.cpp  TestNameSimpleSyntaxRule.cpp  TestNextExtractor.cpp  TestOperatorSimpleSyntaxRule.cpp  TestParentExtractor.cpp  TestParentTExtractor.cpp  TestParserManager.cpp  TestParserRules.cpp  TestPatternExtractor.cpp  TestPrintSimpleSyntaxRule.cpp  TestProcedureSimpleSyntaxRule.cpp  TestProgramSimpleSyntaxRule.cpp  TestReadSimpleSyntaxRule.cpp  TestRelationalExpressionSimpleSyntaxRule.cpp  TestSP.cpp  TestStatementListSimpleSyntaxRule.cpp  TestUsesExtractor.cpp  TestWhileSimpleSyntaxRule.cpp
(+525 files in other folders)
